--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -1,3 +1,12 @@
+.card-columns {
+  @include media-breakpoint-only(lg) {
+    column-count: 4;
+  }
+  @include media-breakpoint-only(xl) {
+    column-count: 5;
+  }
+}
+
 body {
     font-size: 0.875rem;
 }
